produt post completed

--- a/appathon_component.csproj
+++ b/appathon_component.csproj
@@ -226,6 +226,7 @@
     <Compile Include="ImageService.cs" />
     <Compile Include="Models\ImageBlob.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\Request\AddSearchRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -270,6 +271,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Demo\Download\" />
+    <Folder Include="Models\Response\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -312,7 +314,6 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
- 
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
