--- a/Views/Search/Web.config
+++ b/Views/Search/Web.config
@@ -16,10 +16,8 @@
     
     
     <add key="ApiBaseUrl" value="https://dxc-elastic.es.eastus2.azure.elastic-cloud.com:9243" />
-    <add key="IndexName" value="productcollection" />
-    <add key="All" value="all" />
-    <add key="search" value="_search" />
-    
+    <add key="IndexName" value="product" />
+    <add key="All" value="_search" />
     <add key="UserName" value="elastic" />
     <add key="Password" value="8HrE3UsqONjvurcGijwpQAgm" />
     
